--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "parcel index.html --out-dir www --open"
+    "start": "parcel examples/pixi.html --out-dir www --open",
+    "test": "parcel examples/tests.html --out-dir www --open"
   },
   "devDependencies": {
     "parcel-bundler": "^1.8.1",
@@ -8,5 +9,8 @@
     "node-sass": "^4.9.0",
     "@types/pixi.js": "^4.7.1",
     "pixi.js": "^4.7.3"
+  },
+  "dependencies": {
+    "component.js": "^1.0.1"
   }
 }
