--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             "webRoot": "${workspaceFolder}",
             "breakOnLoad" : true,
             "sourceMapPathOverrides": {
-                "*": "${webRoot}/*"
+                "*": "${webRoot}/www/*"
             }
         }
     ]
