--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blocojs",
-  "version": "0.3.5",
+  "version": "0.4.0",
   "description": "PIXI.js component-oriented library",
   "author": "Adam Vesecky",
   "contributors": [
@@ -15,14 +15,18 @@
     "url": "https://github.com/dodocloud/blocojs.git"
   },
   "scripts": {
+    "examples": "parcel examples/*.html --out-dir build",
     "build": "tsc",
     "prepublish": "tsc"
   },
   "files": [
     "src/"
   ],
+  "dependencies": {
+    "pixi.js": "^5.3.3"
+  },
   "devDependencies": {
-    "pixi.js": "^5.3.3",
-    "typescript": "^3.4.3"
+    "typescript": "^3.4.3",
+    "parcel": "^1.12.4"
   }
 }
